--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ python_version = "3.7"
 
 [packages]
 flask = "*"
-tensorflow = "==2.0.0beta-1"
+tensorflow = "==2.0.1"
 
 [dev-packages]
 black = "==19.3b0"
